tests/paczka1/fuzzy1/52107847.err
Error in line 4: Y6Rq3mK S650 84,7
Error in line 15: CwdL5XB S650 1,6
Error in line 9: J2KZO7ySGbi S822 40,8
Error in line 23: CwdL5XB S311 156,19
Error in line 19: J2KZO7ySGbi S650 77,2
Error in line 14: zSjNfML5ol S822 2,2
Error in line 24: pCg S822 57,9
Error in line 28: S650 S650 58,9
Error in line 36: zSjNfML5ol S311 54,91
Error in line 34: pCg S650 70,6
Error in line 3: wNf9 S87 14,1
Error in line 39: wNf9 S311 77,9
